software-center (3.1.16) UNRELEASED; urgency=low

  * merged lp:~mmcg069/software-center/reviews-and-netstatus
    many thanks to Matthew McGowan

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Feb 2011 14:40:07 +0100

software-center (3.1.15) natty; urgency=low

  [ Kiwinote ]
  * softwarecenter/apt/aptcache.py:
    - don't crash if pkg not in cache (deb files)
  * softwarecenter/utils.py,
    utils/submit_review.py:
    - play slightly nicer with locales (LP: #709671)
  * softwarecenter/view/appdetailsview_gtk:
    - correctly hide addons/reviews from interface when we have an error
  * utils/submit_review.py:
    - allow us to review when spell check isn't available (LP: #709155)
  
  [ Michael Vogt ]
  * softwarecenter/db/reviews.py:
    - fix race in review downloaded watcher (LP: #709548)
  * test/test_utils.py:
    - add test for get_language()
  * softwarecenter/backend/zeitgeist_simple.py:
    - don't raise a exception if zeitgeist is not available (LP: #709718)
  * softwarecenter/app.py:
    - fix sso login creation on reinstall-previous purchase (LP: #709856)
  * softwarecenter/view/widgets/reviews.py:
    - change ratings star color (LP: #711030)
  * tests/*:
    - fix test invocation at build time and fix test failures

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Feb 2011 11:34:30 +0100

software-center (3.1.14) natty; urgency=low

  [ Michael Vogt ]
  * utils/submit_review.py:
    - fix visual glitch with the gwibber combo on long usernames
      (thanks to davmor2 for reporting)
  * debian/control:
    - make python-piston-mini-client a hard depenency again
  * softwarecenter/view/softwarepane.py:
    - fix race if details page is clicked before the installed pane
      is fully created (thanks to seb128)

  [ Kiwinote ]
  * data/ui/report_abuse.ui,
    data/ui/submit_review.ui,
    utils/submit_review.py:
    - use a consistent 12px padding around all sides of the dialogs
  * softwarecenter/apt/aptcache.py,